[Fix] 메인페이지 CSS 효과변경

--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -200,6 +200,7 @@
 .profileType {
   background-color: #364db1;
   padding: 1px;
+  padding-top: 4px;
   max-width: 54px;
   border-radius: 12px;
   text-align: center;
