[Fix] 사파리 환경 CSS 수정

--- a/src/component/ground-sidebar/style.module.css
+++ b/src/component/ground-sidebar/style.module.css
@@ -994,7 +994,9 @@
 }
 
 .quizResultContainer {
+    display: inline-box !important;
     display: -webkit-inline-box !important;
+    display: -moz-inline-box !important;
     flex-wrap: nowrap !important;
     min-width: 1200px !important;   
 }
